# newton-fractal-zoom

./: .gitignore  CMakeLists.txt  README.md
cmake/: configure_3rdParty.cmake  pack.cmake  translate_vectorize_flags.cmake
cmake/configure_3rdParty/: DLLDeployer.cmake  ResourceCreator.cmake.cmake  cli11.cmake  fmtlib.cmake  fractal_utils.cmake  magic_enum.cmake  nlohmann_json.cmake  tl-expected.cmake  tomlplusplus.cmake
compute_tasks/: (Linux only)mpfr-50-p3.json  (Linux only)mpfr-50-p7.json  boost-16-p3.json  boost-16-p7.json  boost-8-p3.json  boost-8-p7.json  double-cuda-p3.json  double-cuda-p7.json  double-opencl-p3.json  double-opencl-p7.json  double-p3.json  double-p7.json  float-cuda-p3.json  float-cuda-p7.json  float-opencl-p3.json  float-opencl-p7.json  float-p3.json  float-p7.json
newton/: CMakeLists.txt  OpenCL_support.cpp  OpenCL_support.h  computation.hpp  compute.json  cuda_support.cpp  cuda_support.cu  cuda_support.cuh  cuda_support_nocuda.cpp  mpc_support.cpp  mpc_support.h  newton_archive.cpp  newton_archive.h  newton_equation.hpp  newton_equation_base.cpp  newton_equation_base.h  newton_fractal.cpp  newton_fractal.h  newton_fractal_computation.cl  object_creator.cpp  object_creator.h  test_equation.cpp  test_metdainfo.cpp  test_object_creator.cpp
newton_archive/: CMakeLists.txt  newton_archive.cpp  newton_archive.h
newton_render/: CMakeLists.txt  NF_cuda_macros.hpp  cpu_renderer.cpp  cpu_renderer.h  gpu_impl.cu  gpu_interface.cu  gpu_interface.h  gpu_interface_nogpu.cpp  gpu_internal.h  newton_render.cpp  newton_render.h  render_config.cpp  render_config.h  render_config_0.json  render_config_gpu_impl.cu  render_config_gpu_interface.cu  test_newton_render.cpp  test_rj.cpp
newton_render/no_use/: gpu_interface_no_use.cu
newton_zoomer/: CMakeLists.txt  launcher_wind.cpp  launcher_wind.h  launcher_wind.ui  newton_label.cpp  newton_label.h  newton_zoomer.cpp  newton_zoomer.h  nfzoom.cpp  nfzoom_launcher.cpp  point_form.cpp  point_form.h  point_form.ui  zoomer_custom_widget.cpp  zoomer_custom_widget.h  zoomer_custom_widget.ui
newton_zoomer/others/: nfzoom_launcher_zh_CN.ts  nfzoom_zh_CN.ts
nftool/: CMakeLists.txt  nftool.cpp  run_compute.cpp  run_compute.h  run_list.cpp  run_look.cpp  run_render.cpp  run_taskcvt.cpp  tasks.h
nfvideo/: CMakeLists.txt  load_video_task.cpp  load_video_task.h  nfvideo.cpp  task_example.toml  video_executor.cpp  video_executor.h
render_jsons/: candy-15.json  fire-8.json  grape-8.json  hsv-8.json  interno-10.json  magma-10.json  moderate2-12.json  moderate3-8.json  origin-bold1-9.json  origin-bold2-8.json  origin-color4bar-8.json  origin-color4line-12.json  paired-color-12.json  plasma-9.json  pumpkin-patch-8.json  template.json.in  viridis-10.json  warming-16.json
